Ad overflow fix

--- a/public/app/styles/main.less
+++ b/public/app/styles/main.less
@@ -310,8 +310,9 @@ a.logout {
 }
 
 .ad-leaderboard {
-  width: 728px;
+  max-width: 728px;
   margin: 0 auto;
+  overflow: hidden;
 
   margin-bottom: 20px;
 }
